<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/main_back"
        android:textColor="@color/text"
        tools:context="com.example.george.smartorder.SetToken">




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tokenTextView"
        android:textColor="@color/text"
        android:text="@string/exist_key"
        android:padding="5sp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="3sp"
        android:background="@color/text"
        android:layout_margin="2sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/setTokenHere"
        android:id="@+id/new_token"
        android:textColor="@color/text"
        android:padding="10sp"
        android:layout_marginTop="20sp"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updateToken"
        android:id="@+id/upd_token"
        android:layout_gravity="center_horizontal"
        android:padding="10sp"
        android:layout_marginTop="20sp"
        android:background="@color/button"
        android:textColor="@color/text"/>



</LinearLayout>

