<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/main_back"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <Button
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:text="@string/CreateOrder"
        android:id="@+id/NewOrderBtn"
        android:textSize="20sp"
        android:textColor="@color/text"
        android:layout_margin="30sp"
        android:padding="30sp"
        android:textAllCaps="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/button"/>


    <Button
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:text="@string/setToken"
        android:id="@+id/setTokenID"
        android:textSize="20sp"
        android:textColor="@color/text"
        android:padding="30sp"
        android:textAllCaps="false"
        android:layout_margin="30sp"
        android:layout_below="@id/NewOrderBtn"
        android:layout_centerHorizontal="true"
        android:background="@color/button"/>


    <Button
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:text="@string/Settings"
        android:id="@+id/Settings"
        android:textSize="20sp"
        android:textColor="@color/text"
        android:padding="30sp"
        android:textAllCaps="false"
        android:layout_margin="30sp"
        android:layout_below="@id/setTokenID"
        android:layout_centerHorizontal="true"
        android:background="@color/button"/>


    <!--
    android:background = "@drawable/roundedbutton"
    -->

</RelativeLayout>
